# rest_api/app.js
@@ -4,6 +4,15 @@ var path = require('path');
 var cookieParser = require('cookie-parser');
 var logger = require('morgan');
 
+/* Referencia al middleware */
+var authJWT = require('./middleware/auth');
+
+/* MÓDULO dotenv */
+const dotenv = require('dotenv');
+
+/* CARGA DE DATOS DE CONFIGURACION EN MEMORIA */
+dotenv.config();
+
 /* REFERENCIA AL MÓDULO */
 const swaggerUi = require('swagger-ui-express')
 
@@ -12,8 +21,6 @@ const swaggerFile = require('./swagger_output.json')
 
 var indexRouter = require('./routes/index');
 var usersRouter = require('./routes/users');
-
-var app = express();
 
 var suppliersRouter = require('./routes/suppliers');
   
@@ -33,7 +40,7 @@ app.use(express.static(path.join(__dirname, 'public')));
 
 app.use('/', indexRouter);
 app.use('/users', usersRouter);
-app.use('/suppliers', suppliersRouter);
+app.use('/suppliers', authJWT, suppliersRouter);
 /* CONFIGURACIÓN DE LA RUTA A LA DOCUMENTACIÓN */
 app.use('/documentation', swaggerUi.serve, swaggerUi.setup(swaggerFile))
 
